# pysigma-backend-khulnasoft

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/khulnasoft/: __init__.py  khulnasoft_backend.py
sigma/pipelines/khulnasoft/: __init__.py  khulnasoft_pipeline.py
tests/: test_backend_khulnasoft.py  test_pipelines_khulnasoft.py
