[tool.poetry]
name = "pySigma-backend-khulnasoft"
version = "0.1.0"
description = "pySigma KhulnaSoft backend"
authors = ["Md Sulaiman <security@khulnasoft.com>", "KhulnaSoft Cloud SIEM <security@khulnasoft.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/khulnasoft-lab/pySigma-backend-khulnasoft"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.9.10"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
